<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.6</version>
        <relativePath/>
    </parent>

    <groupId>com.miko</groupId>
    <artifactId>simbot</artifactId>
    <version>1.0</version>
    <packaging>pom</packaging>

    <modules>
        <module>simbot-starter</module>
        <module>simbot-robot</module>
        <module>simbot-web</module>
        <module>simbot-common</module>
        <module>simbot-ai-doubao</module>
    </modules>

    <properties>
        <java.version>25</java.version>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <miko.version>1.0</miko.version>
        <mybatis.version>4.0.1</mybatis.version>
        <mybatis.plus.version>3.5.16</mybatis.plus.version>
        <sqlite.version>3.53.1.0</sqlite.version>
        <druid.version>1.2.28</druid.version>
        <jsoup.version>1.22.2</jsoup.version>
        <httpclient.version>5.6.1</httpclient.version>
        <httputil.version>0.9.7</httputil.version>
        <fastjson.version>2.0.62</fastjson.version>
        <snakeyaml.version>2.6</snakeyaml.version>
        <simple-robot.version>5.0.0-Preview2</simple-robot.version>
        <ktor.version>3.3.3</ktor.version>
        <jsch.version>2.28.2</jsch.version>
        <jasypt.version>4.0.4</jasypt.version>

        <!-- volcengine-java-sdk-ark-runtime -->
        <volcengine-java-sdk-ark-runtime.version>2.0.4</volcengine-java-sdk-ark-runtime.version>
        <jackson.version>2.12.7.1</jackson.version>
        <retrofit.version>2.9.0</retrofit.version>
        <rxjava2.version>2.0.0</rxjava2.version>
        <okhttp3.version>3.14.9</okhttp3.version>
        <bouncycastle.version>1.78.1</bouncycastle.version>
    </properties>

    <!-- 全局依赖 -->
    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>

    </dependencies>

    <dependencyManagement>
        <dependencies>

            <!-- Project model -->
            <dependency>
                <groupId>com.miko</groupId>
                <artifactId>simbot-robot</artifactId>
                <version>${miko.version}</version>
            </dependency>

            <dependency>
                <groupId>com.miko</groupId>
                <artifactId>simbot-common</artifactId>
                <version>${miko.version}</version>
            </dependency>

            <dependency>
                <groupId>com.miko</groupId>
                <artifactId>simbot-web</artifactId>
                <version>${miko.version}</version>
            </dependency>

            <dependency>
                <groupId>com.miko</groupId>
                <artifactId>simbot-starter</artifactId>
                <version>${miko.version}</version>
            </dependency>

            <dependency>
                <groupId>com.miko</groupId>
                <artifactId>simbot-ai-doubao</artifactId>
                <version>${miko.version}</version>
            </dependency>

            <!-- https://docs.spring.io/spring-ai/reference/2.0/getting-started.html -->
            <dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-bom</artifactId>
                <version>2.0.0-M6</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- https://mvnrepository.com/artifact/org.mybatis.spring.boot/mybatis-spring-boot-starter -->
            <dependency>
                <groupId>org.mybatis.spring.boot</groupId>
                <artifactId>mybatis-spring-boot-starter</artifactId>
                <version>${mybatis.version}</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/com.baomidou/mybatis-plus-spring-boot4-starter -->
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-spring-boot4-starter</artifactId>
                <version>${mybatis.plus.version}</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/com.alibaba/druid-spring-boot-starter -->
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>druid-spring-boot-starter</artifactId>
                <version>${druid.version}</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/com.github.ulisesbocchio/jasypt-spring-boot-starter -->
            <dependency>
                <groupId>com.github.ulisesbocchio</groupId>
                <artifactId>jasypt-spring-boot-starter</artifactId>
                <version>${jasypt.version}</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/org.yaml/snakeyaml -->
            <dependency>
                <groupId>org.yaml</groupId>
                <artifactId>snakeyaml</artifactId>
                <version>${snakeyaml.version}</version>
            </dependency>

            <!--https://mvnrepository.com/artifact/com.alibaba.fastjson2/fastjson2-->
            <dependency>
                <groupId>com.alibaba.fastjson2</groupId>
                <artifactId>fastjson2</artifactId>
                <version>${fastjson.version}</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
            <dependency>
                <groupId>org.jsoup</groupId>
                <artifactId>jsoup</artifactId>
                <version>${jsoup.version}</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents.client5/httpclient5 -->
            <dependency>
                <groupId>org.apache.httpcomponents.client5</groupId>
                <artifactId>httpclient5</artifactId>
                <version>${httpclient.version}</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/io.github.admin4j/common-http-starter -->
            <dependency>
                <groupId>io.github.admin4j</groupId>
                <artifactId>common-http-starter</artifactId>
                <version>${httputil.version}</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp -->
            <dependency>
                <groupId>com.squareup.okhttp3</groupId>
                <artifactId>okhttp</artifactId>
                <version>${okhttp3.version}</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
            <dependency>
                <groupId>org.xerial</groupId>
                <artifactId>sqlite-jdbc</artifactId>
                <version>${sqlite.version}</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/love.forte.simbot/simbot-core-spring-boot-starter -->
            <dependency>
                <groupId>love.forte.simbot</groupId>
                <artifactId>simbot-core-spring-boot-starter</artifactId>
                <version>${simple-robot.version}</version>
            </dependency>
            <dependency>
                <groupId>love.forte.simbot</groupId>
                <artifactId>simbot-core-jvm</artifactId>
                <version>${simple-robot.version}</version>
            </dependency>
            <dependency>
                <groupId>love.forte.simbot.component</groupId>
                <artifactId>simbot-component-onebot-v11-core-jvm</artifactId>
                <version>${simple-robot.version}</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/io.ktor/ktor-client-java-jvm -->
            <dependency>
                <groupId>io.ktor</groupId>
                <artifactId>ktor-client-java-jvm</artifactId>
                <version>${ktor.version}</version>
                <scope>runtime</scope>
            </dependency>

            <!-- https://mvnrepository.com/artifact/com.volcengine/volcengine-java-sdk-ark-runtime -->
            <dependency>
                <groupId>com.volcengine</groupId>
                <artifactId>volcengine-java-sdk-ark-runtime</artifactId>
                <version>${volcengine-java-sdk-ark-runtime.version}</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/tools.jackson.core/jackson-databind -->
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson.version}</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/com.github.mwiede/jsch -->
            <dependency>
                <groupId>com.github.mwiede</groupId>
                <artifactId>jsch</artifactId>
                <version>${jsch.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <!-- 添加Lombok注解处理器 -->
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>public</id>
            <name>aliyun nexus</name>
            <url>https://maven.aliyun.com/repository/public</url>
            <releases>
                <enabled>true</enabled>
            </releases>
        </repository>

        <repository>
            <id>spring-snapshots</id>
            <name>Spring Snapshots</name>
            <url>https://repo.spring.io/snapshot</url>
            <releases>
                <enabled>false</enabled>
            </releases>
        </repository>
        <repository>
            <name>Central Portal Snapshots</name>
            <id>central-portal-snapshots</id>
            <url>https://central.sonatype.com/repository/maven-snapshots/</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>public</id>
            <name>aliyun nexus</name>
            <url>https://maven.aliyun.com/repository/public</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>

</project>